--- a/KrakenFlock/TODO.txt
+++ b/KrakenFlock/TODO.txt
@@ -1,3 +1,13 @@
 TODO Log
 
 Everything
+
+Structure outline of code.
+    - Constructors
+    - Variables
+    - Methods
+    - Runner
+
+AI
+
+Define Rules of game
